
## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

AM_LDFLAGS = -module
AM_DEFAULT_SOURCE_EXT = .cc
noinst_LTLIBRARIES = simul.la exact.la \
    gen_rg_base.la gen_exp_as.la gen_exp_ph.la \
    proc_meddly.la satur_meddly.la expl_meddly.la \
    dcp_expl.la dcp_symb.la \
    csl_exp.la
