
## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libexpr.la

libexpr_la_SOURCES = \
  exprman.h     exprman.cc \
  superman.h    superman.cc \
  engine.h      engine.cc \
  formalism.h   formalism.cc \
  init_data.h   init_data.cc \
  type.h        type.cc \
  result.h      result.cc \
  expr.h        expr.cc \
  bogus.h       bogus.cc \
  values.h      values.cc \
  symbols.h     symbols.cc \
  iterators.h   iterators.cc \
  arrays.h      arrays.cc \
	stmts.h       stmts.cc \
  forloops.h    forloops.cc \
  functions.h   functions.cc \
  converge.h    converge.cc \
  sets.h        sets.cc \
  strings.h     strings.cc \
  intervals.h   intervals.cc \
  unary.h       unary.cc \
  casting.h     casting.cc \
  binary.h      binary.cc \
  trinary.h     trinary.cc \
  assoc.h       assoc.cc \
  ops_bool.h    ops_bool.cc \
  ops_int.h     ops_int.cc \
  ops_real.h    ops_real.cc \
  ops_set.h     ops_set.cc \
  ops_misc.h    ops_misc.cc \
  dd_front.h    dd_front.cc \
  mod_def.h     mod_def.cc \
  mod_vars.h    mod_vars.cc \
  mod_inst.h    mod_inst.cc \
  measures.h    measures.cc 

