
## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

AM_LDFLAGS = -module
AM_DEFAULT_SOURCE_EXT = .cc
noinst_LTLIBRARIES = \
    basic_msr.la stoch_msr.la ctl_msr.la csl_msr.la dcp_msr.la \
    dsde_hlm.la noevnt_hlm.la phase_hlm.la \
    check_llm.la stoch_llm.la \
    rss.la rss_indx.la rss_enum.la \
    mc_llm.la fsm_llm.la \
    rss_mdd.la fsm_mdd.la mc_mdd.la \
    dcp_form.la mc_form.la fsm_form.la pn_form.la evm_form.la tam_form.la


