
## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

bin_PROGRAMS = teststrms testsplay

## teststrms 

teststrms_SOURCES = teststrms.cc
teststrms_LDADD = ../Streams/libstream.la

## testsplay

testsplay_SOURCES = testsplay.cc
testsplay_LDADD = ../Streams/libstream.la

