
SUBDIRS = . examples

lib_LTLIBRARIES = libsim.la libsimmdl.la

libsim_la_SOURCES = \
  sim.h \
  sim.cc \
  normal.h \
  normal.cc \
  autocorrelation.h \
  autocorrelation.cc

libsimmdl_la_SOURCES = \
  sim-models.h \
  sim-models.cc \
  normal.h \
  normal.cc \
  autocorrelation.h \
  autocorrelation.cc


