
noinst_PROGRAMS = \
  grtest triples

AM_CPPFLAGS = -I../ -I../../_IntSets

grtest_SOURCES = grtest.cc ../graphlib.cc ../sccs.cc ../../_IntSets/intset.cc
# grtest_LDADD =  ../../_IntSets/libintset.la

triples_SOURCES = triples.cc ../graphlib.cc ../sccs.cc ../../_IntSets/intset.cc
triples_LDADD = ../../_RngLib/librng.la
