
noinst_PROGRAMS = \
  rawtest \
  jumptest \
  grid \
  uniftest \
  expotest \
  autocorr \
  shuffle

AM_CPPFLAGS = -I../

rawtest_SOURCES = rawtest.cc ../rng.cc

jumptest_SOURCES = jumptest.cc ../rng.cc

grid_SOURCES = grid.cc ../rng.cc

uniftest_SOURCES = uniftest.cc ../rng.cc

expotest_SOURCES = expotest.cc ../rng.cc

autocorr_SOURCES = autocorr.cc ../rng.cc

shuffle_SOURCES = shuffle.cc ../rng.cc
