
noinst_PROGRAMS = \
  rawtest \
  jumptest \
  grid \
  uniftest \
  expotest \
  autocorr \
  shuffle

AM_CPPFLAGS = -I$(srcdir)/../

rawtest_SOURCES = rawtest.cc
rawtest_LDADD = ../librng.la


jumptest_SOURCES = jumptest.cc
jumptest_LDADD = ../librng.la


grid_SOURCES = grid.cc
grid_LDADD = ../librng.la


uniftest_SOURCES = uniftest.cc 
uniftest_LDADD = ../librng.la


expotest_SOURCES = expotest.cc
expotest_LDADD = ../librng.la


autocorr_SOURCES = autocorr.cc
autocorr_LDADD = ../librng.la


shuffle_SOURCES = shuffle.cc
shuffle_LDADD = ../librng.la
