
# $Id$

noinst_PROGRAMS = \
  rawtest \
  jumptest \
  grid \
  uniftest \
  expotest \
  autocorr \
  shuffle

AM_CPPFLAGS = -I../src

rawtest_SOURCES = rawtest.cc
rawtest_LDADD = ../src/librng.la

jumptest_SOURCES = jumptest.cc
jumptest_LDADD = ../src/librng.la

grid_SOURCES = grid.cc
grid_LDADD = ../src/librng.la

uniftest_SOURCES = uniftest.cc
uniftest_LDADD = ../src/librng.la

expotest_SOURCES = expotest.cc
expotest_LDADD = ../src/librng.la

autocorr_SOURCES = autocorr.cc
autocorr_LDADD = ../src/librng.la

shuffle_SOURCES = shuffle.cc
shuffle_LDADD = ../src/librng.la
